--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "esm": "^3.2.25",
+    "lodash": "^4.17.15",
     "object-resolve-path": "^1.1.1"
   },
   "devDependencies": {
