fix: removed object-resolve-path lib, use lodash.get directly

--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "author": "Louis Grellet <louis.grellet@gmail.com>",
   "license": "ISC",
   "repository": "https://github.com/cypherlab/js-utils",
-  "source": "src/index.js",
-  "module": "src/index.js",
   "main": "index.js",
+  "module": "src/index.js",
+  "source": "src/index.js",
   "scripts": {
     "test": "mocha -r esm"
   },
   "dependencies": {
     "esm": "^3.2.25",
-    "lodash": "^4.17.15",
-    "object-resolve-path": "^1.1.1"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "chai": "^4.2.0",
