--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   "module": "src/index.js",
   "source": "src/index.js",
   "scripts": {
+    "release": "np",
     "test": "mocha -r esm"
-  },
-  "dependencies": {
-    "esm": "^3.2.25",
-    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "esm": "^3.2.25",
     "mocha": "^6.2.0"
   }
 }
